# sudoku_solver

./: .gitignore  CMakeLists.txt  README.md  TODO.md
data/: sudoku.txt
src/: main.c  render.c  render.h  solver.c  solver.h  sudoku.c  sudoku.h
test/: test_solve_sudokus.c
